--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/TestMap.TestMap
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_MyGameModeBase.BP_MyGameModeBase_C
 
