--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # Do not ignore source, config and plugins dirs.
 !/Source/**
 !/Config/**
-!/Plugins/**
+# !/Plugins/**
 
 # Only allow .uasset and .umap files from /Content dir.
 # They're tracked by git-lfs, don't forget to track other
