--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/TestMap.TestMap
+EditorStartupMap=/Game/MapTest1/BobandRobLevel2.BobandRobLevel2
 GlobalDefaultGameMode=/Game/Blueprints/BP_MyGameModeBase.BP_MyGameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
